--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Why I’m Thankful For You 💖</title>
+  <title>I love you deary 💖</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
 </head>
 <body>
   <div class="container">
     <h1>thank you for everything, baba 💗</h1>
-    <p class="subtext">Happy 1st Anni – 23.03.2024 🐻</p>
-    <p id="reason">Click the button to see why I'm thankful for you...</p>
-    <button onclick="showReason()">Tell Me Why 🥺</button>
+    <p class="subtext">Happy 1st Anni – 22.03.2024 🐻</p>
+    <p id="reason">Click the buttons...</p>
+    <button onclick="showReason()">Thankful For You!</button>
     <br><br>
     <a href="letter.html" class="link-button">Read My Letter 💌</a>
     <a href="gallery.html" class="link-button">Our Memories 📸</a>
