--- a/gallery.html
+++ b/gallery.html
@@ -4,24 +4,73 @@
   <meta charset="UTF-8">
   <title>Our Memories 📸</title>
   <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
   <style>
+    body {
+      font-family: 'Patrick Hand', cursive;
+      background: linear-gradient(to bottom right, #ffe6f0, #fff0f5);
+      margin: 0;
+      padding: 0;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      min-height: 100vh;
+    }
+
+    .container {
+      text-align: center;
+      padding: 40px 20px;
+    }
+
+    h1 {
+      color: #ff69b4;
+      font-size: 2em;
+      margin-bottom: 30px;
+    }
+
     .gallery {
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      gap: 15px;
-      margin-top: 20px;
+      gap: 20px;
+      margin-top: 10px;
     }
 
     .gallery img {
-      width: 180px;
-      border-radius: 10px;
+      height: auto;
+      max-width: 100%;
+      border-radius: 15px;
       box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      transition: transform 0.2s;
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
+      animation: floaty 6s ease-in-out infinite alternate;
     }
 
     .gallery img:hover {
-      transform: scale(1.05);
+      transform: scale(1.03);
+      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+    }
+
+    @keyframes floaty {
+      from { transform: translateY(0px); }
+      to   { transform: translateY(-15px); }
+    }
+
+    .link-button {
+      background-color: #ffb6c1;
+      border: none;
+      padding: 10px 20px;
+      font-size: 1em;
+      border-radius: 12px;
+      cursor: pointer;
+      margin: 30px auto;
+      text-decoration: none;
+      color: #fff;
+      transition: background 0.2s ease;
+      display: inline-block;
+    }
+
+    .link-button:hover {
+      background-color: #ff99aa;
     }
   </style>
 </head>
@@ -34,8 +83,12 @@
       <img src="3.jpg" alt="Memory 3">
       <img src="4.jpg" alt="Memory 4">
       <img src="5.jpg" alt="Memory 5">
+      <img src="6.jpg" alt="Memory 6">
+      <img src="7.jpg" alt="Memory 7">
+      <img src="8.jpg" alt="Memory 8">
+      <img src="9.jpg" alt="Memory 9">
+      <img src="10.jpg" alt="Memory 10">
     </div>
-    <br>
     <a href="index.html" class="link-button">Back to Main 💖</a>
   </div>
 </body>
