--- a/gallery.html
+++ b/gallery.html
@@ -2,94 +2,75 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Our Memories 📸</title>
+  <title>Floating Memories ✨</title>
   <link rel="stylesheet" href="style.css">
   <link href="https://fonts.googleapis.com/css2?family=Patrick+Hand&display=swap" rel="stylesheet">
   <style>
     body {
-      font-family: 'Patrick Hand', cursive;
-      background: linear-gradient(to bottom right, #ffe6f0, #fff0f5);
       margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      min-height: 100vh;
+      background: linear-gradient(to bottom right, #ffe6f0, #fff0f5);
+      overflow: hidden;
+      font-family: 'Patrick Hand', cursive;
     }
 
-    .container {
-      text-align: center;
-      padding: 40px 20px;
-    }
-
-    h1 {
-      color: #ff69b4;
-      font-size: 2em;
-      margin-bottom: 30px;
-    }
-
-    .gallery {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 20px;
-      margin-top: 10px;
-    }
-
-    .gallery img {
-      height: auto;
-      max-width: 100%;
+    .floating-img {
+      position: absolute;
+      width: 150px;
       border-radius: 15px;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.1);
-      transition: transform 0.4s ease, box-shadow 0.4s ease;
-      animation: floaty 6s ease-in-out infinite alternate;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      animation: floatRandom 20s infinite ease-in-out;
     }
 
-    .gallery img:hover {
-      transform: scale(1.03);
-      box-shadow: 0 8px 20px rgba(0,0,0,0.15);
+    @keyframes floatRandom {
+      0% {
+        transform: translateY(0px) translateX(0px) rotate(0deg);
+        opacity: 0.8;
+      }
+      50% {
+        transform: translateY(-200px) translateX(100px) rotate(10deg);
+        opacity: 1;
+      }
+      100% {
+        transform: translateY(0px) translateX(0px) rotate(-5deg);
+        opacity: 0.9;
+      }
     }
 
-    @keyframes floaty {
-      from { transform: translateY(0px); }
-      to   { transform: translateY(-15px); }
-    }
-
-    .link-button {
+    .back-button {
+      position: fixed;
+      bottom: 20px;
+      left: 50%;
+      transform: translateX(-50%);
       background-color: #ffb6c1;
-      border: none;
       padding: 10px 20px;
-      font-size: 1em;
       border-radius: 12px;
-      cursor: pointer;
-      margin: 30px auto;
+      color: white;
+      font-size: 1em;
       text-decoration: none;
-      color: #fff;
-      transition: background 0.2s ease;
-      display: inline-block;
+      font-family: 'Patrick Hand', cursive;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.2);
+      transition: background 0.3s ease;
     }
 
-    .link-button:hover {
+    .back-button:hover {
       background-color: #ff99aa;
     }
   </style>
 </head>
 <body>
-  <div class="container">
-    <h1>Our Memories 📸</h1>
-    <div class="gallery">
-      <img src="1.jpg" alt="Memory 1">
-      <img src="2.jpg" alt="Memory 2">
-      <img src="3.jpg" alt="Memory 3">
-      <img src="4.jpg" alt="Memory 4">
-      <img src="5.jpg" alt="Memory 5">
-      <img src="6.jpg" alt="Memory 6">
-      <img src="7.jpg" alt="Memory 7">
-      <img src="8.jpg" alt="Memory 8">
-      <img src="9.jpg" alt="Memory 9">
-      <img src="10.jpg" alt="Memory 10">
-    </div>
-    <a href="index.html" class="link-button">Back to Main 💖</a>
-  </div>
+
+  <!-- Floating images -->
+  <img src="1.jpg" class="floating-img" style="top: 10%; left: 5%;">
+  <img src="2.jpg" class="floating-img" style="top: 20%; left: 40%;">
+  <img src="3.jpg" class="floating-img" style="top: 60%; left: 10%;">
+  <img src="4.jpg" class="floating-img" style="top: 70%; left: 50%;">
+  <img src="5.jpg" class="floating-img" style="top: 30%; left: 70%;">
+  <img src="6.jpg" class="floating-img" style="top: 50%; left: 80%;">
+  <img src="7.jpg" class="floating-img" style="top: 15%; left: 85%;">
+  <img src="8.jpg" class="floating-img" style="top: 75%; left: 20%;">
+  <img src="9.jpg" class="floating-img" style="top: 45%; left: 60%;">
+  <img src="10.jpg" class="floating-img" style="top: 35%; left: 30%;">
+
+  <a href="index.html" class="back-button">Back to Main 💖</a>
 </body>
 </html>
